testsuite/poke.pkl/int-struct-type-diag-7.pk
/* { dg-do compile } */

type Foo =
  struct uint<32> /* { dg-error "invalid total size.*\n.*expected 32" } */
  {
    int<16> a;
    int<17> b;
  };
